--- a/sites/all/themes/blogbuzz/css/custom.css
+++ b/sites/all/themes/blogbuzz/css/custom.css
@@ -214,10 +214,14 @@ ul.staff-list {
   padding: 0;
   margin: 0;
 }
+.staff-header-photo {
+  width: 100%;
+  text-align: center;
+}
 .staff-header-bio,
 ul.staff-list li {
   list-style-type: none;
-  padding: 0 0 0 10px 0;
+  padding: 0 0 5px 0;
   margin: 0 0 20px 0;
   clear: both;
   border-bottom: 1px solid #ccc;
