new header image, css work

--- a/sites/all/themes/blogbuzz/css/custom.css
+++ b/sites/all/themes/blogbuzz/css/custom.css
@@ -31,7 +31,7 @@ table {
 }
 
 #header {
-  background: #272626 url(../images/crossroads_header.jpg) no-repeat top center;
+  background: #272626 url(../images/crossroads_header_2.jpg) no-repeat top center;
   height: 250px;
 }
 #secondary {
@@ -59,6 +59,9 @@ table {
 #primary { 
   background: #5b2359 url(../images/purple/bg_menu.png) repeat-x 0% 100%;
 }
+#primary ul {
+  font-size: 100%;
+}
 #primary ul li:hover, 
 #primary ul li.active, 
 #primary ul li.active-trail {
@@ -66,6 +69,12 @@ table {
 }
 #primary ul li ul li a {
   color: #b595b4;
+}
+#primary a {
+  padding: 17px 25px 9px;
+}
+#primary ul ul a {
+  padding: 5px 0px;
 }
 
 /*home page */
@@ -129,12 +138,22 @@ body.front #main-inner {
   font-size: 14px;
 }
 
-/* menu */
-.block-system-main-menu ul li {
+/* footer */
+#footer {
+  height: 133px;
+}
+#block-system-main-menu ul li {
   float:left;
-  padding-right: 30px;
+  padding-right: 40px;
   list-style-type: none;
+  list-style-image: none;
+  background: none;
   border-bottom: none;
+  padding-left: 0;
+  font-size: 15px;
+}
+#block-system-main-menu ul li ul {
+  display: none;
 }
 
 /* VBS page */
